--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -63,84 +63,66 @@
   <div class="row">
     <div class="col-md-4 order-md-2 mb-4">
       <h4 class="d-flex justify-content-between align-items-center mb-3">
-        <span class="text-muted">Your cart</span>
+        <span class="text-muted">Order SUmmary</span>
         <span class="badge badge-secondary badge-pill">3</span>
       </h4>
       <ul class="list-group mb-3">
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0">Product name</h6>
+            <h6 class="my-0">Items:</h6>
             <small class="text-muted">Brief description</small>
           </div>
-          <span class="text-muted">$12</span>
+          <span class="text-muted">$112.49</span>
         </li>
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0">Second product</h6>
-            <small class="text-muted">Brief description</small>
+            <h6 class="my-0">Shiping & handling:</h6>
           </div>
-          <span class="text-muted">$8</span>
+          <span class="text-muted">$5.99</span>
         </li>
         <li class="list-group-item d-flex justify-content-between lh-condensed">
           <div>
-            <h6 class="my-0">Third item</h6>
+            <h6 class="my-0">Total before tax:</h6>
             <small class="text-muted">Brief description</small>
           </div>
-          <span class="text-muted">$5</span>
+          <span class="text-muted">$118.48</span>
         </li>
         <li class="list-group-item d-flex justify-content-between bg-light">
           <div class="text-success">
-            <h6 class="my-0">Promo code</h6>
-            <small>EXAMPLECODE</small>
+            <h6 class="my-0">Estimated tax to be collected:*</h6>
           </div>
-          <span class="text-success">-$5</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-          <span>Total (USD)</span>
-          <strong>$20</strong>
+          <span class="text-success">$8.95</span>
         </li>
       </ul>
-
-      <form class="card p-2">
+      <hr>
+      <form class="mb-3">
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Promo code">
-          <div class="input-group-append">
-            <button type="submit" class="btn btn-secondary">Redeem</button>
-          </div>
+          <h4><b>Order total: $127.43</b></h4>
+        <div class="input-group-append">
+          <button type="submit" class="btn btn-secondary">Place Order</button>
+        </div>
         </div>
       </form>
+      <hr>
 	  <div class="mb-3">
-		<label for="address">Address</label>
-		<input type="text" class="form-control" id="address" placeholder="1234 line St" required>
-		<div class="invalid-feedback">
-		  Please enter your shipping address.
-		</div>
+		<label for="address">Shipping Address</label>
+		<input type="text" class="form-control" id="street" placeholder="Street:" required>
+    <input type="text" class="form-control" id="city" placeholder="City:" required>
+		<input type="text" class="form-control" id="state" placeholder="State:" required>
+		<input type="text" class="form-control" id="postal code" placeholder="Postal Code:" required>
+
+
 	  </div>
 
-	  <div class="mb-3">
-		<label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-		<input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-	  </div>
+
     </div>
     <div class="col-md-8 order-md-1">
-      <h4 class="mb-3">Billing address</h4>
-      <form class="needs-validation" novalidate>
-        <div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="firstName">First name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-            <div class="invalid-feedback">
-              Valid first name is required.
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="lastName">Last name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
-            <div class="invalid-feedback">
-              Valid last name is required.
-            </div>
-          </div>
-        </div>
+      <h4 class="mb-3">Items</h4>
+      <hr>
+              <h6><b>Stiletto TI14MS</b> - 14 oz. Titanium Framing Hammer</h6>
+             <h6><b>Occidental Leather 5080DB</b> - Pro Framer Set with Double Outer Bag + Industrial Oxidized Cock Ring</h6>
+              <h6><b>Rockwell RK9034</b> - JawStand XP Work Support Stand</h6>
+  
 
         <div class="mb-3">
           <label for="username">Username</label>
