removed innapropriate language added by Aki Stankoski

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -113,7 +113,7 @@
       <h4 class="mb-3">Items</h4>
       <hr class="mb-4">
               <h6><b>Stiletto TI14MS</b> - 14 oz. Titanium Framing Hammer</h6>
-             <h6><b>Occidental Leather 5080DB</b> - Pro Framer Set with Double Outer Bag + Industrial Oxidized Cock Ring</h6>
+             <h6><b>Occidental Leather 5080DB</b> - Pro Framer Set with Double Outer Bag</h6>
               <h6><b>Rockwell RK9034</b> - JawStand XP Work Support Stand</h6>
         
   
