--- a/static/style.css
+++ b/static/style.css
@@ -298,3 +298,18 @@ input[type=button].button-secondary:hover {
   padding: 1rem;
   font-size: medium;
 }
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
