--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -91,14 +91,13 @@
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
       </div>
-        <div class="modal-body">
+        <div class="modal-body" id="map">
         
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
 
-      <div class='modal-body' id="map"></div>
       <div id="popupdarkbg"></div>
       
       <div class="modal-footer">
